# lf11a_project_backend

./: .env_example  .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql
.github/workflows/: ci.yml
src/: db.rs  handler.rs  handler_personnel.rs  lib.rs  main.rs  models.rs
src/handlers/: department.rs  employee.rs  mod.rs  salary_grade.rs
tests/: db_department_integration_test.rs  db_employee_integration_test.rs  db_salary_grade_integration_test.rs  db_test.rs  direct_handler_test.rs  handler_department_with_db_test.rs  handler_employee_with_db_test.rs  handler_personnel_test.rs  handler_salary_grade_with_db_test.rs  handler_test.rs  handlers_module_test.rs  integration_department_test.rs  integration_employee_test.rs  integration_handler_test.rs  integration_salary_grade_test.rs  models_test.rs  unit_models_test.rs
tests/common/: mod.rs
