[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
actix-web = "4.9"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"
