[package]
name = "backend"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
utoipa = { version = "4.2", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

[dev-dependencies]
actix-web = "4.9"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"
